--- a/index.Rmd
+++ b/index.Rmd
@@ -49,7 +49,7 @@ valueBox(value = dplyr::n_distinct(fermentedfood.new$Product),
          color = "info"
          )
 ```
-### Category 
+### Ontological Categories 
 ```{r}
 valueBox(value =  dplyr::n_distinct(fermentedfood.new$Category), 
          icon = "fas fa-leaf", 
@@ -66,7 +66,7 @@ valueBox(value = dplyr::n_distinct(fermentedfood.new$Raw_material_ontology),
 
 ### Country
 ```{r}
-valueBox(value = dplyr::n_distinct(fermentedfood.flat$Country),
+valueBox(value = dplyr::n_distinct(fermentedfood.flat$Country_code),
          icon = "fas fa-globe", 
         )
 ```
@@ -97,7 +97,7 @@ fermentedfood.joined <- left_join(country.table, fermentedfood.agg, by = 'alpha.
 map$total_count <-fermentedfood.joined[match(map$ISO3, fermentedfood.joined$alpha.3),"total_count"]
 # palete of colors
 pal <- colorBin(palette = 'viridis', domain = map$total_count,
-                bins = seq(0, max(map$total_count, na.rm = TRUE) +15, by = 2))
+                bins = seq(0, max(map$total_count, na.rm = TRUE) +15, by = 10))
 
 
 map$labels <- paste0("<strong> Country: </strong> ", map$NAME, "<br/> ",
