Update index.Rmd new collaborator
Added Nicholas Bokulich to the collaborators

--- a/index.Rmd
+++ b/index.Rmd
@@ -313,6 +313,8 @@ The code behind this dashboard is available on [Github](https://github.com/bokul
 
 * Lena Flörl (ETH Zurich, Switzerland)
 
+* Nicholas Bokulich (ETH Zurich, Switzerland)
+
 * Anna Greppi (ETH Zurich, Switzerland)
 
 * Rossana Coda (University of Helsinki, Finland)
