FIX: typo in contributors section

--- a/index.Rmd
+++ b/index.Rmd
@@ -331,7 +331,7 @@ The code behind this dashboard is available on [Github](https://github.com/bokul
 
 * Salome Häcki (ETH Zurich, Switzerland)
 
-* Joan Oñate Narciso (Universitat de Lleida, Spain)
+* Joan Oñate Narciso (Université de Lleida, Spain)
 
 * Theresa Abimbola Awotundun (Ajayi Crowther University, Nigeria)
 
