Polishing of the dashboard (#23)
* FIX: fix in country codes mapping in standalone_fermpage

* FIX: typo in contributors section

--- a/index.Rmd
+++ b/index.Rmd
@@ -242,6 +242,12 @@ datatable(colnames = c("Continent","Region",'Subregion',"Country","Category","Pr
   ) 
 ```
 
+Explorer
+=======================================================================
+
+```{=html}
+<iframe src="standalone_fermpage/index.html" style='height: 100%; width: 100%;' frameBorder='0'></iframe>
+```
 
 About {data-orientation=rows}
 ===================================== 
@@ -326,7 +332,7 @@ The code behind this dashboard is available on [Github](https://github.com/bokul
 
 * Salome Häcki (ETH Zurich, Switzerland)
 
-* Joan Oñate Narciso (Universitat de Lleida, Spain)
+* Joan Oñate Narciso (Université de Lleida, Spain)
 
 * Theresa Abimbola Awotundun (Ajayi Crowther University, Nigeria)
 
