--- a/index.Rmd
+++ b/index.Rmd
@@ -26,11 +26,14 @@ library(leaflet)
 library(rnaturalearth)
 library(ggplot2)
 library(readxl)
+library(readr)
 library(tidyr)
 library(collapsibleTree)
 #------------ Country cleanup ---------------------
 country.table <- read.csv("country.csv")
 fermentedfood.new <- read_excel("FermDB_data.xlsx", .name_repair = function(x) gsub("\\s+", "_", x))
+fermentedfood.new_test <- read_tsv("FermDB_data.xlsx")
+print(fermentedfood.new_test)
 
 fermentedfood.flat <- separate_longer_delim(fermentedfood.new,c(Country,Country_code),delim = ',')
 fermentedfood.flat$Country_code <- as.integer(fermentedfood.flat$Country_code)
