--- a/index.Rmd
+++ b/index.Rmd
@@ -328,6 +328,8 @@ The code behind this dashboard is available on [Github](https://github.com/bokul
 
 * Nicholas Bokulich (ETH Zurich, Switzerland)
 
+* Till Bauknecht (ETH Zurich, Switzerland)
+
 * Anna Greppi (ETH Zurich, Switzerland)
 
 * Rossana Coda (University of Helsinki, Finland)
@@ -348,3 +350,4 @@ The code behind this dashboard is available on [Github](https://github.com/bokul
 
 * Sengchanh Kounnavong (Lao Tropical & Public Health Institute, Lao PDR)
 
+* Charlotte Lambert (ETH Zurich, Switzerland)
