--- a/index.Rmd
+++ b/index.Rmd
@@ -350,3 +350,5 @@ The code behind this dashboard is available on [Github](https://github.com/bokul
 * Sengchanh Kounnavong (Lao Tropical & Public Health Institute, Lao PDR)
 
 * Charlotte Lambert (ETH Zurich, Switzerland) 
+
+* Charlotte Lambert (ETH Zurich, Switzerland) 
